# swatplus-tinamit-coupling

./: .gitignore  45SubsidyScenario.mdl  90HighSubsidyScenario.mdl  BaseLineScenario.mdl  README.md  SWATWrapper.py  UsaBasinModel.py  _vars.py  pyproject.toml  requirements.txt  vensim usa model.mdl  vensim usa model.py
Usa-Basin-Model/: files_out.out
