[tool.poetry]
name = "swatplus-tinamit-coupling"
version = "0.1.0"
description = ""
authors = ["joelz575 <joel.harms@mail.mcgill.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
tinamit = "^2.0.3"
tinamit-idm = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
